--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Products</h1>
     <ul>
         {% for product in products %}
             <li>{{ product.name }}     (${{product.price}})</li>
         {% endfor %}
     </ul>
-</body>
-</html>
+
+{% endblock %}
