--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -11,9 +11,13 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="127.0.0.1:8000">Pyshop</a>
+    </nav>
+<div class="container">      
     {% block content %}
     {% endblock %}
-
+</div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
