--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -2,12 +2,11 @@
 
 {% block content %}
     <h1>Products</h1>
-        
         <div class="row">
             {% for product in products %}
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="{{ product.image_url }}" class="card-img-top" alt="...">
+                    <img src="{{ product.image_url }}" class="card-img-top" alt="..." style="width: 250px; height: 200px;">
                     <div class="card-body">
                       <h5 class="card-title">{{product.name}}</h5>
                       <p class="card-text">${{product.price}}</p>
